templates/rke2-snapshot-validation-webhook_template.yaml
---
# Source: rke2-snapshot-validation-webhook/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-rke2-snapshot-validation-webhook
  labels:
    helm.sh/chart: rke2-snapshot-validation-webhook-1.7.302
    app.kubernetes.io/name: rke2-snapshot-validation-webhook
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v6.2.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
  ipFamilyPolicy: PreferDualStack
  selector:
    app.kubernetes.io/name: rke2-snapshot-validation-webhook
    app.kubernetes.io/instance: release-name
---
# Source: rke2-snapshot-validation-webhook/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-rke2-snapshot-validation-webhook
  labels:
    helm.sh/chart: rke2-snapshot-validation-webhook-1.7.302
    app.kubernetes.io/name: rke2-snapshot-validation-webhook
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v6.2.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rke2-snapshot-validation-webhook
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rke2-snapshot-validation-webhook
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-rke2-snapshot-validation-webhook
      securityContext:
        {}
      containers:
        - name: rke2-snapshot-validation-webhook
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: "rancher/mirrored-sig-storage-snapshot-validation-webhook:v6.2.2"
          imagePullPolicy: IfNotPresent
          args:
            - --port=8443
            - --tls-cert-file=/etc/snapshot-validation/tls.crt
            - --tls-private-key-file=/etc/snapshot-validation/tls.key
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/snapshot-validation
              name: tls-config
          livenessProbe:
            httpGet:
              path: /readyz
              port: https
              scheme: HTTPS
          readinessProbe:
            httpGet:
              path: /readyz
              port: https
              scheme: HTTPS
          resources:
            {}
      volumes:
        - name: tls-config
          secret:
            secretName: release-name-rke2-snapshot-validation-webhook-tls
      nodeSelector:
        kubernetes.io/os: linux
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/control-plane
          operator: Exists
        - effect: NoExecute
          key: node-role.kubernetes.io/etcd
          operator: Exists
---
# Source: rke2-snapshot-validation-webhook/templates/webhook.yaml
# Check if the TLS secret already exists and initialize variables for later use at the top level
---
# Source: rke2-snapshot-validation-webhook/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: release-name-rke2-snapshot-validation-webhook
  labels:
    helm.sh/chart: rke2-snapshot-validation-webhook-1.7.302
    app.kubernetes.io/name: rke2-snapshot-validation-webhook
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v6.2.2"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: rke2-snapshot-validation-webhook.csi.kubernetes.io
    rules:
      - apiGroups:
        - snapshot.storage.k8s.io
        apiVersions:
        - v1
        - v1beta1
        operations:
        - CREATE
        - UPDATE
        resources:
        - volumesnapshots
        - volumesnapshotclasses
        - volumesnapshotcontents
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: release-name-rke2-snapshot-validation-webhook
        path: "/volumesnapshot"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURtVENDQW9HZ0F3SUJBZ0lRQnA4MVdPVHVWR0lxNmJFdGtOUmI3akFOQmdrcWhraUc5dzBCQVFzRkFEQkUKTVVJd1FBWURWUVFERXpseVpXeGxZWE5sTFc1aGJXVXRjbXRsTWkxemJtRndjMmh2ZEMxMllXeHBaR0YwYVc5dQpMWGRsWW1odmIyc3VaR1ZtWVhWc2RDNXpkbU13SGhjTk1qUXdOVEUxTURrMU9EQTRXaGNOTXpRd05URXpNRGsxCk9EQTRXakJFTVVJd1FBWURWUVFERXpseVpXeGxZWE5sTFc1aGJXVXRjbXRsTWkxemJtRndjMmh2ZEMxMllXeHAKWkdGMGFXOXVMWGRsWW1odmIyc3VaR1ZtWVhWc2RDNXpkbU13Z2dFaU1BMEdDU3FHU0liM0RRRUJBUVVBQTRJQgpEd0F3Z2dFS0Fv [...]
    admissionReviewVersions:
    - v1
    - v1beta1
    sideEffects: None
    failurePolicy: Fail
    timeoutSeconds: 2
